Fix to make project work with Java 11